[package]
name = "doubao-web-image"
version = "1.0.0"
edition = "2024"
authors = ["Kimi Agent"]
description = "Rust-based Doubao Web image generation CLI using chromiumoxide"
license = "MIT"
repository = "https://github.com/gushuaialan1/doubao-web-image"

[dependencies]
chromiumoxide = "0.9"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12" }
directories = "6"
anyhow = "1"
futures = "0.3"
serde_json = "1"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
strip = true
